objects/Work_Item__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(NOT(ISBLANK(Completed_Date__c)), Completed_Date__c  - CreatedDate,NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <inlineHelpText>Please select a disposition before completing the Work Item.</inlineHelpText>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>IF(Owner:Queue.QueueName = &quot;&quot;, (Owner:User.FirstName + &quot; &quot; + Owner:User.LastName), Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Locked_Date_Time__c</fullName>
        <formula>Completed_Date__c + (1.0014/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Locked Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Work Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Completed_Date__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Disposition__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Billing_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Queue</label>
        <queue>Billing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commissions_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Commissions Queue</label>
        <queue>Commissions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Compliance Queue</label>
        <queue>Compliance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Concierge_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Concierge Queue</label>
        <queue>Concierge</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalations_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Escalations Queue</label>
        <queue>Escalations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Expense_Sharing_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Expense Sharing Queue</label>
        <queue>Expense_Sharing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Loomis_Queue_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Loomis Queue</label>
        <queue>Loomis_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Member_Loyalty_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Member Loyalty Queue</label>
        <queue>Member_Loyalty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Member_Support_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Member Support Queue</label>
        <queue>Member_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Work_Items</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <label>My Work Items</label>
    </listViews>
    <listViews>
        <fullName>Pre_Cert_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Pre-Cert Queue</label>
        <queue>Pre_Cert</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Producer_Support_Work_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Producer Support Queue</label>
        <queue>Producer_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Work Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_edit_a_completed_Work_Item</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 Record_Locked__c = TRUE,
 Completed_Date__c &gt; NOW() + 0.002
)</errorConditionFormula>
        <errorMessage>You cannot edit a Work Item that has been completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_owner_can_edit_work_item</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 $User.Id &lt;&gt;  OwnerId,
 NOT(ISCHANGED(OwnerId))
)</errorConditionFormula>
        <errorMessage>You must own this Work Item to edit or make changes.</errorMessage>
    </validationRules>
</CustomObject>